IOUtils.toInputStream and IOUtils.toString where possible